# langchain-setup

./: .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  docker-compose.yml  pyproject.toml  ssh_into_guest.sh  stop-vm.sh
app/: main.py
docker/: docker-compose.yml
docker/langserve/: Dockerfile  requirements.txt
langflow/: web-page-rag.json
scripts/: ssh-and-start-vm.sh
