[tool.poetry]
name = "langchain-app"
version = "0.1.0"
description = "Runs a Webpage analysis AI from a LangFlow Agent Design"
authors = ["Rolf Streefkerk <r.streefkerk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
langserve = "^0.2.1"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
langchain-text-splitters = "^0.2.1"
uvicorn = "^0.30.1"
langchain = "0.2.3"
bs4 = "^0.0.2"
faiss-cpu = "^1.8.0"
sse-starlette = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
